<resources>
    <string name="app_name">amatda</string>

    <!-- 공통 -->
    <string name="common_button_checked">OK</string>
    <string name="common_button_cancel">CANCEL</string>
    <string name="common_button_next">Next</string>
    <string name="common_delete">DELETE</string>
    <string name="common_name">Name</string>
    <string name="common_type">Type</string>
    <string name="common_edit">Edit</string>
    <string name="copyright_miricanvas">source: miricanvas</string>
    <string name="common_message_required_internet_connection">Internet connection required</string>
    <string name="toast_message_failed_this_service_is_not_open">Service is being prepared</string>
    <string name="common_toast_message_check_internet_connection">Please check your internet connection</string>

    <!-- 로그인 -->
    <string name="login">Login</string>
    <string name="login_log_out">Log Out</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="login_success">Login Success</string>
    <string name="login_failed">Login Failed</string>
    <string name="login_email">Email</string>
    <string name="login_email_login">Login with Email</string>
    <string name="login_sign_up_with_email">Sign Up by email</string>
    <string name="login_password">Password</string>
    <string name="login_password_recheck">Reconfirm Password</string>
    <string name="login_toast_password_recheck">Password verification is incorrect.</string>
    <string name="login_toast_sign_up_success">Email sign-up is complete.\nYou can log in when email verification is complete.</string>
    <string name="login_toast_sign_up_failed">Email sign-up is failed.</string>
    <string name="login_toast_sign_up_failed_pw_weakness">Password should be at least 6 characters</string>
    <string name="login_please_check_verify_email">A verification email has been sent to your registered email address.\nPlease check your verification email.</string>
    <string name="login_toast_check_verify_email">Email is not verified.\nProceed with email verification.</string>
    <string name="login_toast_failed_invalid_password">The password is incorrect.</string>
    <string name="login_toast_failed_invalid_user">This is an unregistered email.</string>
    <string name="login_dialog_failed_has_no_current_user">There is no current user (CurrentUser) of the Amata application.</string>

    <!-- 권한 -->
    <string name="toast_cannot_get_location_no_permission">Permissions denied</string>
    <string name="permission_request_title">Permissions required.</string>
    <string name="permission_request_denied_my_home_message">Location permission is required to use My Home.\nChange [Settings] > [Permissions] > [Location] to [Allow this time only] or [Allow while using the app].</string>
    <string name="permission_request_denied_trip_message">Background location permission is required to use Travel Reminder.\nChange [Settings] > [Permissions] > [Location] to [Always allow].</string>

    <!-- 메뉴 -->
    <string name="menu_home">home</string>
    <string name="menu_my_carrier">my carrier</string>
    <string name="menu_my_trip">trip reminder</string>
    <string name="menu_my_page">my page</string>

    <!-- 앱 바 메뉴 -->
    <string name="app_bar_search">searching</string>
    <string name="app_bar_item_add">add Item</string>
    <string name="app_bar_add_carrier">add Carrier</string>
    <string name="app_bar_add_trip">add Trip</string>
    <string name="app_bar_more">more</string>
    <string name="app_bar_setting">Setting</string>
    <string name="app_bar_refresh">Refresh</string>

    <!-- 마이페이지 -->
    <string name="my_page_email">Email</string>
    <string name="my_page_nickname">NickName</string>
    <string name="my_page_tier">Tier</string>
    <string name="my_page_level">Level</string>
    <string name="my_page_level_question">\?</string>
    <string name="my_page_register_profile_image">Photo Registration</string>
    <string name="my_page_setting">Setting</string>
    <string name="my_page_export_db_server">Back up</string>
    <string name="my_page_import_db_server">Restore</string>
    <string name="my_page_qna">Q &#38; A</string>
    <string name="my_page_privacy">Privacy Policy</string>
    <string name="my_page_opensource_license">OpenSource License</string>
    <string name="my_page_logout">Log Out</string>
    <string name="toast_message_my_page_update_user">Profile information has been updated</string>
    <string name="toast_message_my_page_cancel_import_db">You Canceled to restore</string>
    <string name="toast_message_my_page_ok_import_db">Restoration is complete</string>
    <string name="toast_message_my_page_failed_import_db_no_data">There is no data to restore</string>
    <string name="toast_message_my_page_cancel_export_db">You canceled the backup</string>
    <string name="toast_message_my_page_ok_export_db">Backup is complete</string>
    <string name="dialog_message_my_page_import_db">Are you sure you want to restore your bag information backed up on the server?\nCaution!!..My bag information currently saved will be deleted.</string>
    <string name="dialog_message_my_page_export_db">Would you like to back up your current bag information to the server?</string>
    <string name="dialog_message_my_page_logout">Caution!!..When you log out, the currently saved data will be lost. Log out after backing up to the server\nDo you want to log out?</string>
    <string name="toast_message_my_page_logout_failed">logout failed</string>

    <!-- 홈 화면 -->
    <string name="toast_message_my_home_refresh">Bring back information around you.</string>
    <string name="home_toast_message_error_get_weather">Failed to get weather. Please try again by clicking the refresh button in the upper right corner.</string>
    <string name="home_restaurant_korean_food">Korean food</string>
    <string name="home_restaurant_western_food">Western food</string>
    <string name="home_restaurant_japanese_food">Japanese_food</string>
    <string name="home_restaurant_chinenes_food">Chinenes_food</string>
    <string name="home_restaurant_asian_food">Asian_food</string>
    <string name="home_restaurant_family_restaurant">Family_restaurant</string>
    <string name="home_restaurant_unique_restaurant">Unique_restaurant</string>
    <string name="home_restaurant_vegetarian_restaurant">Vegetarian_restaurant</string>
    <string name="home_restaurant_bar_cafe">bar/cafe</string>
    <string name="home_restaurant_club">club</string>
    <string name="home_restaurant_restaurant">Restaurant</string>


    <!-- QNA -->
    <string name="toolbar_qna">Q &amp; A</string>

    <!-- 개인정보 보호정책 -->
    <string name="toolbar_privacy_policy">Privacy Policy</string>

    <!-- contentDescription -->
    <string name="cttdcrp_add_carrier">add carrier</string>
    <string name="cttdcrp_carrier">carrier for adding a item</string>
    <string name="cttdcrp_add_item">add item</string>

    <!-- 날짜 형식 -->
    <string name="default_date_type">yyyy year-MM month-dd day</string>

    <!-- 가방 만들기 -->
    <string name="carrier_make">Create bag</string>
    <string name="question_carrier_name">Please name the bag</string>
    <string name="question_carrier_name_hint">bag name</string>
    <string name="carrier_pocket_is_empty">There are currently no pockets</string>
    <string name="carrier_pocket_count">number of pockets</string>
    <string name="dialog_message_my_carrier_delete_carrier">Are you sure you want to delete carrier?</string>

    <!-- 주머니 관련 (Drawer Naviagation 포함)-->
    <string name="add_pocket_guide_text">No pockets.\nRequires creation of new pockets.</string>
    <string name="add_pocket_guide_button">Add pocket</string>
    <string name="edit_pocket_add">Add pocket</string>
    <string name="edit_pocket_rename">Rename pockets</string>
    <string name="edit_pocket_delete">Delete a pocket</string>
    <string name="edit_pocket_rename_cancel">cancel (Rename pockets)</string>
    <string name="edit_pocket_delete_cancel">cancel (Delete a pocket)</string>
    <string name="item_position_inner">inside</string>
    <string name="item_position_middle">middle</string>
    <string name="item_position_outer">outside</string>

    <!-- 물건 만들기 -->
    <string name="add_item_label">add item</string>
    <string name="edit_item_label">Rename an item</string>
    <string name="save_carrier_and_item">Storing bag information in the cloud</string>

    <!-- 물건 만들기 - ToolTip -->
    <string name="item_edit_tooltip_delete">delete</string>
    <string name="item_edit_tooltip_resize">resize</string>
    <string name="item_edit_tooltip_count">count</string>
    <string name="item_edit_tooltip_color">color</string>

    <!-- 물건 만들기 - 가이드 설명 -->
    <string name="item_guide_text_0">lay the bag down</string>
    <string name="item_guide_text_1">inside\n(First floor)</string>
    <string name="item_guide_text_2">middle\n(Second floor)</string>
    <string name="item_guide_text_3">outside\n(3rd Floor)</string>

    <!-- 검색 -->
    <string name="item_search_hint">Search..</string>
    <string name="item_search_nothing">No Items</string>

    <!-- 여행 만들기 -->
    <string name="question_trip_title">Please name your trip</string>
    <string name="question_trip_title_hint">ex)summer trip with friends</string>
    <string name="question_trip_date">Please select the start and end dates of your trip from the calendar.</string>
    <string name="question_trip_date_start_day">travel start date</string>
    <string name="question_trip_date_end_day">travel end date</string>
    <string name="question_trip_course">place to travel</string>
    <string name="question_trip_concept">Check out the travel concept.</string>
    <string name="button_trip_make">Make Trip</string>
    <string name="button_go_back_to_home">home</string>
    <string name="dialog_message_my_carrier_delete_trip">Are you sure you want to delete your trip?</string>

    <!-- 지역 생성 -->
    <string name="question_trip_zone_ok">Add location</string>
    <string name="toast_message_trip_zone_success">TripZone registration was successful.</string>
    <string name="toast_message_trip_zone_failed">TripZone registration failed. please try again</string>
    <string name="button_make_trip_zone_reminder">Create reminders</string>

    <!-- 다이얼로그 -->
    <string name="dialog_edit_text">Value to change</string>
    <!-- 다이얼로그 별명 변경 -->
    <string name="dialog_edit_text_nickname_title">Change your nickname and click OK</string>
    <string name="dialog_edit_text_nickname_hint">Nickname</string>
    <!-- 다이얼로그 레벨 -->

    <string name="dialog_level_level_1">Level: 1 / Rank: Yellow Map / Exp: 100</string>
    <string name="dialog_level_level_2">Level: 2 / Rank: Green Map / Exp: 210</string>
    <string name="dialog_level_level_3">Level: 3 / Rank: Blue Map / Exp: 330</string>
    <string name="dialog_level_level_4">Level: 4 / Rank: Red Map / Exp: 460</string>
    <string name="dialog_level_level_5">Level: 5 / Rank: Orange Map / Exp: 600</string>
    <string name="dialog_level_level_6">Level: 6 / Rank: Purple Map / Exp: 750</string>
    <string name="dialog_level_level_7">Level: 7 / Rank: Black Map / Exp: 910</string>
    <string name="dialog_level_level_8">Level: 8 / Rank: Rainbow Map / Exp: 1080</string>

</resources>