<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_edit_text_dialog_guide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/til_edit_text_dialog"
            tools:text="변경 후에 확인을 눌러주세요 "/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_edit_text_dialog"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:startIconDrawable="@drawable/ic_twotone_edit_24"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_edit_text_dialog_guide"
            app:layout_constraintBottom_toTopOf="@id/btn_edit_text_dialog_cancel"
            tools:hint="@string/dialog_edit_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_edit_text_dialog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_edit_text_dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/common_button_cancel"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_edit_text_dialog_ok"
            app:layout_constraintTop_toBottomOf="@id/til_edit_text_dialog"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_edit_text_dialog_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="30dp"
            android:text="@string/common_button_checked"
            app:layout_constraintStart_toEndOf="@id/btn_edit_text_dialog_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_edit_text_dialog_cancel"
            app:layout_constraintBottom_toBottomOf="@id/btn_edit_text_dialog_cancel"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>